-{ * * }- sec